<resources>
    <string name="app_name">Customs Taxes Calculator</string>
    <!-- Page Titles -->
    <string name="title_calculate">Calculate</string>
    <string name="title_about">About</string>
    <string name="title_carriers">Carriers</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_rules">Rules</string>
    <string name="title_saved">Saved</string>
    <string name="title_search">Search</string>

    <!-- Calculation Page Item Strings -->
    <string name="label_error_prices">This field can\'t be empty!</string>
    <string name="label_hint_item_price">Item price</string>
    <string name="label_hint_cargo_price">Cargo price</string>
    <string name="label_hint_used_limit">Used amount</string>
    <string name="label_hint_item_weight">Item weight</string>
    <string name="label_checkbox_limit">I have used my limit.</string>
    <string name="label_checkbox_limit_fully">I have used my all limit.</string>

    <string name="label_carrier_message_placeholder">Please click here to select your carrier company</string>
    <string name="label_tax_and_customs_payments">Tax and Customs Payments</string>
    <string name="label_vat">VAT: %1$.2f ₼</string>
    <string name="label_import_tax">Import Tax: %1$.2f ₼</string>
    <string name="label_tax_collections">Tax Collections: %1$.2f ₼</string>
    <string name="label_service_fee">Service Fee: %1$.2f ₼</string>
    <string name="label_total">Total: %1$.2f ₼</string>
    <string name="label_total_price_to_pay">Total Price to Pay: %1$.2f ₼</string>
    <string name="label_cargo_price">Cargo price: %1$.2f $</string>
    <string name="label_dialog_save_calculation">Calculation name</string>
    <string name="label_dialog_save_calculation_message">Enter name for calculation</string>
    <string name="label_dialog_save_calculation_save">Save</string>
    <string name="label_dialog_save_calculation_cancel">Cancel</string>
    <string name="label_dialog_hint_calculation_name">Calculation name</string>
    <string name="snackbar_dialog_error">You entered unsupported name.</string>
    <string name="snackbar_menu_save_error">First you need a valid calculation in order to save it.</string>
    <string name="toast_unselected_carrier">You need to select a carrier for calculation.</string>
    <string name="button_calculate">Calculate</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_taxes" translatable="false">Taxes</string>

    <!-- Taxes Page Item Strings -->
    <string name="text_customs_terms" translatable="false"> \t Azerbaijan Customs Committee allows ordering goods for personal use which in
        total does not exceed the limit of 300$. If any Azerbaijan citizen exceeds
        this limits then that person has to pay Customs taxes. This taxes includes
        VAT, import tax, customs collections and service fee.</string>
    <string name="text_customs_taxes_headline" translatable="false">Customs Terms and Fees</string>
    <string name="text_vat" translatable="false"> \t Fist of all you need to pay VAT. VAT stands for Value Added Tax and it\'s 18% of product price. </string>
    <string name="text_import_tax" translatable="false"> \t Import tax is 5% of product price.</string>
    <string name="text_customs_collections" translatable="false">" \t Customs collections fee is depending on defined range. If your item's price is in range of 0 and 1000₼ then you have to pay 15₼.
        \n\t\t0₼ - 1 000₼ is 15₼
	    \n\t\t1 000₼ - 10 000₼ is 60₼
	    \n\t\t10 000₼ - 50 000₼ is 120₼
	    \n\t\t50 000₼ - 100 000₼ is 200₼
	    \n\t\t100 000₼ - 500 000₼ is 300₼
	    \n\t\t500 000₼ - 1 000 000₼ is 600₼
	    \n\t\t1 000 000₼ and higher is 1000₼"
    </string>
    <string name="text_service_fee" translatable="false"> \t If you are paying fees from e.customs.gov.az or \"Smart Customs\" app then you have to pay standart 10₼ Electronic Service Fee.</string>

    <string name="label_coming_soon">Coming Soon</string>

    <!-- Carriers Page Item Strings -->
    <string name="description_carrier_image">Carrier Image</string>
    <string name="label_carrier_price">Price: %1$.2f$ - %2$.2f$</string>
    <string name="label_carrier_warehouse">Warehouses: %1$s</string>

    <!-- Saved Calculation Page Item Strings -->
    <string name="label_calculation_price" translatable="false">%1$.1f₼</string>
    <string name="label_calculation_saved_on" translatable="false">Saved on: %1$s</string>
    <string name="label_calculation_taxes" translatable="false">Taxes: %1$.1f₼</string>
    <string name="label_calculation_cargo_price" translatable="false">Cargo price: %1$.1f$</string>

    <!-- Preference Titles -->
    <string name="preference_general_header">General</string>
    <string name="preference_calculation_header">Calculation</string>
    <string name="preference_design_header">Design</string>

    <!-- General Preferences -->
    <string name="preference_language_title">Language</string>
    <string name="preference_item_currency_title">Item price currency</string>
    <string name="preference_language_entry_en">English</string>
    <string name="preference_language_entry_az">Azerbaijani</string>
    <string name="preference_language_entry_ru">Russian</string>
    <string name="preference_item_currency_entry_dollar">Dollar</string>
    <string name="preference_item_currency_entry_manat">Manat</string>
    <string name="preference_item_currency_entry_tl">Turkish Lira</string>

    <!-- Calculation Preferences -->
    <string name="preference_default_calculation_type_title">Default calculation type</string>
    <string name="preference_default_calculation_type_summary">You can calculate the price by selection carrier or inserting cargo price manually.</string>
    <string name="preference_default_calculation_type_entry_carrier">By choosing carrier</string>
    <string name="preference_default_calculation_type_entry_cargo_price">By writing cargo price</string>
    <string name="preference_mass_unit_title">Mass unit</string>
    <string name="preference_clean_title">Clean after calculation</string>

    <!-- Design Preferences -->
    <string name="preference_detailed_calculation_title">Detailed calculation</string>
    <string name="preference_detailed_calculation_summary">Show all customs taxes and payments in detailed version.</string>
    <string name="preference_save_carrier_title">Save carrier</string>
    <string name="preference_save_carrier_summary">Save selected carrier for next times.</string>
    <string name="preference_limit_title">Limits area</string>
    <string name="preference_limit_summary">If you will never use limits area then we suggest you to turn it off.</string>

    <!-- Carrier Strings -->
    <string name="warehouse_baku">Baku</string>
    <string name="warehouse_ganja">Ganja</string>
    <string name="warehouse_sumgayit">Sumgayit</string>
    <string name="warehouse_zagatala">Zagatala</string>

    <!-- Carrier Short Descriptions -->
    <string name="short_description_limak" translatable="false">2019-cu ildə fəaliyyətə başlamış şirkətin Bakı və Azərbaycanın bütün bölgələrində lisenziyalı regional ofisləri fəaliyyət göstərir. LİMAK VM MMC 7/24 rejimdə fəaliyyət göstərən heyəti ilə bu günə qədər 50 mindən artıq istifadəçinin 300 mindən çox bağlamasını təhvil verib. Şirkətin peşəkar müştəri xidmətləri  *9595 çağrı mərkəzi və bütün sosial platformalardakı online xidmətləri ilə yüksək müştəri məmnuniyyətini təmin edir.</string>
    <string name="short_description_mover" translatable="false">“Mover” MMC express logistika şirkətidir. 2015-ci ildən bəri Azərbaycan bazarında fəaliyyət göstərən şirkət bu günə qədər 60 mindən çox fiziki şəxsin 3 milyondan artıq yükünü müxtəlif xarici ölkələrdən Azərbaycana gətirib, o cümlədən ölkə daxilindəki ünvanlara əldən təslim edib.</string>
    <string name="short_description_camex" translatable="false">Camex şirkəti, Azərbaycan Respublikası İqtisadiyyat Nazirliyi tərəfindən verilmiş lisenziya əsasında 2012-ci ildən etibarən fəaliyyət göstərməkdədir.«Camex» ABŞ, Almaniya, BƏƏ, Türkiyə, Çin, İngiltərə poçt bağlamalarının, onlayn mağazalar vasitəsilə sifariş edilən malların, eləcə də böyük həcmli və ağır çəkili qeyri-standart yüklərin qısa müddətdə hava nəqliyyatı ilə Azərbaycana çatdırılmasını təşkil edir.</string>
    <string name="button_delete">delete</string>

    <!-- New -->

</resources>