<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_general_header">

        <DropDownPreference
            app:enabled="false"
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:icon="@drawable/ic_baseline_language_24dp"
            app:key="language"
            app:title="@string/preference_language_title"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            app:enabled="false"
            app:defaultValue="dollar"
            app:entries="@array/currency_entries"
            app:entryValues="@array/currency_values"
            app:icon="@drawable/ic_outline_currency_24dp"
            app:key="currency"
            app:title="@string/preference_item_currency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_calculation_header">

        <ListPreference
            app:defaultValue="carrier"
            app:entries="@array/default_calculation_type_entries"
            app:entryValues="@array/default_calculation_type_values"
            app:icon="@drawable/ic_baseline_calculate_24dp"
            app:key="calculation_type"
            app:summary="@string/preference_default_calculation_type_summary"
            app:title="@string/preference_default_calculation_type_title"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:enabled="false"
            app:defaultValue="kg"
            app:entries="@array/calculation_mass_unit_entries"
            app:entryValues="@array/calculation_mass_unit_values"
            app:icon="@drawable/ic_outline_weight_24dp"
            app:key="mass_unit"
            app:title="@string/preference_mass_unit_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_sweeping_24dp"
            app:key="clean"
            app:title="@string/preference_clean_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_design_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_outline_details_24dp"
            app:key="detailed"
            app:summary="@string/preference_detailed_calculation_summary"
            app:title="@string/preference_detailed_calculation_title" />

        <SwitchPreferenceCompat
            app:enabled="true"
            app:defaultValue="true"
            app:dependency="calculation_type"
            app:icon="@drawable/ic_baseline_save_24dp"
            app:key="save_carrier"
            app:summary="@string/preference_save_carrier_summary"
            app:title="@string/preference_save_carrier_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_outline_customs_24dp"
            app:key="limit"
            app:summary="@string/preference_limit_summary"
            app:title="@string/preference_limit_title" />
    </PreferenceCategory>

</PreferenceScreen>