<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_baseline_save_24dp"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_calculate"
        android:icon="@drawable/ic_baseline_calculate_24dp"
        android:title="@string/title_calculate" />

    <item
        android:id="@+id/navigation_carriers"
        android:icon="@drawable/ic_outline_carrier_24dp"
        android:title="@string/title_carriers" />

    <item
        android:id="@+id/navigation_rules"
        android:icon="@drawable/ic_outline_rules_24dp_2"
        android:title="@string/title_rules" />
</menu>